# brands_task

./: docker-compose.yaml
.data/db/pgdata/base/1/: 2619  2696  2840  pg_internal.init
.data/db/pgdata/base/16389/: 112  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13463  13463_fsm  13463_vm  13468  13468_fsm  13468_vm  13473  13473_fsm  13473_vm  13478  13478_fsm  13478_vm  13482  16390  16393  16395  (+189 more)
.data/db/pgdata/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
.data/db/pgdata/pg_stat/: pgstat.stat
backend/: Dockerfile  pyproject.toml
backend/brand_project/: alembic.ini
backend/brand_project/mainapp/: config.py  database.py  main.py  models.py  router.py  schemas.py  views.py
backend/brand_project/mainapp/migration/: env.py
backend/brand_project/mainapp/migration/versions/: 0a1fa239f117_init.py  0dcbaf48ed01_add_many_to_many_for_countries.py  12426b176086_initial_revision.py  2aaa793933b1_init.py  2f4f3d397313_init.py  2f864a8fab95_init.py  3315809b956f_init.py  4893813ea2df_init.py  58ec83b7abb2_a.py  5b545a8aec38_init.py  5bff77acd29d_init.py  65f8dc91eca5_init.py  72af8060c8db_init.py  7ee245c35e20_init.py  808c4b7bc9d5_init.py  85cff1d06dfe_init.py  85f1dffaa891_init.py  8a27de113174_initial_revision.py  8d10d994fb70_init.py  b9b16b081fa7_init.py  bcfe50a6f776_init.py  be2080e5f95d_init.py  c58499bc4f5b_add_many_to_many_for_countries.py  caf2678fd14a_init.py  d1347ca22be3_init.py  e1b26177e49a_init.py  e1e8265e868b_initial_revision.py  e5634af3aba6_add_many_to_many_for_countries.py
(+1 files in other folders)
